--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Premier</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
@@ -241,10 +241,10 @@
       </div>
       <div class="page7">
         <div class="page7-content">
-          <h1>Premier models 2020</h1>
-          <h1>Premier models 2020</h1>
-          <h1>Premier models 2020</h1>
-          <h1>Premier models 2020</h1>
+          <h1>Premier models 2025</h1>
+          <h1>Premier models 2025</h1>
+          <h1>Premier models 2025</h1>
+          <h1>Premier models 2025</h1>
         </div>
       </div>
       <div class="page8">
